# Computational-Image-Puzzle-Solver

./: CMakeLists.txt  README.md  match_analysis.csv
.build/: CMakeCache.txt  Makefile  MyImageApplication  cmake_install.cmake
data_sample/more_sample_irregular/mona_lisa/: mona_lisa_rotate.rgb  mona_lisa_translate.rgb
data_sample/more_sample_irregular/sample1/: sample1_rotate.rgb  sample1_translate.rgb
data_sample/more_sample_irregular/sample2/: sample2_rotate.rgb  sample2_translate.rgb
data_sample/more_sample_irregular/sample3/: sample3_rotate.rgb  sample3_translate.rgb
data_sample/more_sample_irregular/starry_night/: starry_night_rotate.rgb  starry_night_translate.rgb
debug/: raster_log.txt
src/: Assembler.h  FeatureExtractor.cpp  FeatureExtractor.h  Main.cpp  Matcher.cpp  Matcher.h  config.cpp  config.h
src/Animation/: PuzzleAnimator.cpp  PuzzleAnimator.h
src/Features/: FeatureExtractor.cpp  FeatureExtractor.h
src/ImageIO/: ImageLoader.cpp  ImageLoader.h
src/Matching/: PieceMatcher.cpp  PieceMatcher.h  PieceMatcher_translate.cpp  PieceMatcher_translate.h
src/Pieces/: Piece.h  PieceExtractor.cpp  PieceExtractor.h
src/Puzzle/: Assembler.cpp  Assembler.h
